# rlickpractice

./: Cargo.toml  build.rs  package.json  pnpm-lock.yaml  tailwind.config.js
assets/: main.css
qml/: main.qml
src/: cxxqt_object.rs  main.rs  sqlreader.rs
src/ui_files/: untitled.ui
templates/: add_lick.html  base.html  empty_pdf.html  index.html  lick.html  lick_pdf.html  licks.html  licks_table.html
