[package]
name = "rlickpractice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "0.7", features = ["runtime-tokio"]}
cxx = "1.0.83"
cxx-qt = "0.5"
cxx-qt-lib = "0.5"
ruic = "0.1.1"

[build-dependencies]
cxx-qt-build = "0.5"
