[package]
name = "rlickpractice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "0.7.4", features = ["runtime-async-std", "mysql", "macros", "time", "chrono"]}
time = {version = "0.3.34", features = ["formatting", "macros"]}
async-std = "1.12.0"
cxx = "1.0.119"
cxx-qt = "0.6"
cxx-qt-lib = "0.6"

[build-dependencies]
cxx-build = {version = "1.0"}
cxx-qt-build = {version = "0.6", features = ["link_qt_object_files" ]}
