[package]
name = "rlickpractice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = {version = "1.36.0", features = ["full"]}
reqwest = {version = "0.11.20", features = ["json"] }
serde = "1.0.188"
sqlx = {version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "macros",
    "any",
    "mysql"] }
anyhow = "1.0.81"
dotenv = "0.15.0"
axum-macros = "0.4.1"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"

